syntax = "proto3";

package grpc_patient;

service PatientService {
  rpc AddPatient (PatientRequest) returns (PatientResponse);
}

message PatientRequest {
  string name = 1;
  string birth_date = 2;
}

message PatientResponse {
  string message = 1;
}
